@@ -46,7 +46,7 @@ $i=100;grep($fieldimps{$_}=$i--,
           qw(Package Version Section Priority Architecture Essential
              Pre-Depends Depends Recommends Suggests Optional Conflicts Replaces
              Provides Installed-Size Maintainer Source Description Build-Depends
-             Build-Indep-Depends  Build-Conflicts Build-Indep-Conflicts));
+             Build-DependsIndep  Build-Conflicts Build-Conflicts-Indep));
 
 while (@ARGV) {
     $_=shift(@ARGV);
