@@ -1,3 +1,12 @@
+Mon Oct 25 11:55:35 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * scripts/dpkg-shlibdeps: start using objdump as opposed to ldd, this
+    works much more cleanly, works with libc5, and allows from better
+    error reporting. Also corrected checks on shlibs.local, which wasn't
+    really being parsed, it now works as advertised.
+  * scripts/{dpkg-gencontrol,dpkg-source,controllib.pl}: fixed references
+    to old style build dep fields to match current policy ammendment
+
 Mon Oct 25 17:12:34 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * gettextize dselect
